Changes to be committed:

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,9 @@
 MONGO_URI=mongodb+srv://root:Drogbadd11@apvthomy.vf7z8t2.mongodb.net/apv?retryWrites=true&w=majority
 JWT_SECRET=palabrasupersecreta
+
+EMAIL_USER=43a1fc1755a1cb
+EMAIL_PASS=255c0fd94dffe9
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+
+FRONTEND_URL=http://localhost:5173
